[metadata]
name = aws_example
version = attr: hopeit.aws.s3.__version__
description = hopeit.aws plugins Example App

[options]    
python_requires = >=3.9
packages =
    aws_example.model
    aws_example.s3
include_package_data = True
install_requires = file: requirements.txt
package_dir =
    = src