[project]
name = "hopeit.aws.s3"
version = "0.3.0rc0"

description = "Hopeit Engine S3 Storage Toolkit"
dynamic = ["readme"]

dependencies = ["hopeit.engine>=0.26.0rc1", "boto3<1.36.0", "aioboto3>=13.0.1"]
license = { text = "Apache 2" }
authors = [
    { name = "Leo Smerling & Pablo Canto", email = "contact@hopeit.com.ar" },
    { name = "Leo Smerling", email = "contact@hopeit.com.ar" },
    { name = "Pablo Canto", email = "contact@hopeit.com.ar" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

[project.urls]
"Homepage" = "https://github.com/hopeit-git/hopeit.aws"
"CI: GitHub Actions" = "https://github.com/hopeit-git/hopeit.aws/actions?query=workflow"
"GitHub: issues" = "https://github.com/hopeit-git/hopeit.aws/issues"
"GitHub: repo" = "https://github.com/hopeit-git/hopeit.aws"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
