[metadata]
name = hopeit.aws.s3
version =  attr: hopeit.aws.s3.__version__
url = https://github.com/hopeit-git/hopeit.aws
project_urls =
    CI: GitHub Actions = https://github.com/hopeit-git/hopeit.aws/actions?query=workflow
    GitHub: issues = https://github.com/hopeit-git/hopeit.aws/issues
    GitHub: repo = https://github.com/hopeit-git/hopeit.aws
description = Hopeit Engine S3 Storage Toolkit
author = Leo Smerling and Pablo Canto
author_email = contact@hopeit.com.ar
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache Software License

    Intended Audience :: Developers

    Programming Language :: Python    
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 4 - Beta

    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

    Framework :: AsyncIO

[options]
python_requires = >=3.9
packages = hopeit.aws.s3
install_requires = file: requirements.txt
include_package_data = True
package_dir =
    = src

[options.package_data]
hopeit.aws.s3 = py.typed
